fix dark mode toggle not toggling correctly and fix contact input color

--- a/_sass/includes/contact-form.scss
+++ b/_sass/includes/contact-form.scss
@@ -18,6 +18,7 @@
 .contact-input-field {
     width: 100%;
     margin-bottom: .75rem;
+    color: black;
     border: none;
     border: solid 1px var(--border-color);
     border-radius: .5rem;
